added api clinet and link api to login and added permession

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -14,15 +14,34 @@
     "fill_all_fields": "يرجى ملء جميع الحقول",
     "login_success": "تم تسجيل الدخول بنجاح!",
     "email_invalid": "يرجى إدخال عنوان بريد إلكتروني صحيح",
-    "password_min_length": "يجب أن تكون كلمة المرور على الأقل 6 أحرف"
+    "password_min_length": "يجب أن تكون كلمة المرور على الأقل 6 أحرف",
+    "invalid_credentials": "البريد الإلكتروني أو كلمة المرور غير صحيحة. يرجى المحاولة مرة أخرى.",
+    "server_error": "خطأ في الخادم. يرجى المحاولة مرة أخرى لاحقاً.",
+    "connection_error": "تعذر الاتصال بالخادم. يرجى التحقق من اتصال الإنترنت.",
+    "login_failed": "فشل تسجيل الدخول. يرجى المحاولة مرة أخرى."
   },
   "common": {
     "required": "*",
     "select_all": "تحديد الكل",
-    "logout": "تسجيل الخروج"
+    "logout": "تسجيل الخروج",
+    "user": "مستخدم",
+    "no_permissions": "لا توجد صلاحيات متاحة"
   },
   "errors": {
-    "page_not_found": "الصفحة غير موجودة: {uri}"
+    "page_not_found": "الصفحة غير موجودة: {uri}",
+    "bad_request": "طلب غير صحيح",
+    "unauthorized": "غير مصرح",
+    "forbidden": "محظور",
+    "not_found": "غير موجود",
+    "internal_server_error": "خطأ في الخادم الداخلي",
+    "unknown_error": "خطأ غير معروف",
+    "connection_failed": "تعذر الاتصال بالخادم. يرجى المحاولة مرة أخرى لاحقاً.",
+    "unexpected_error": "حدث خطأ غير متوقع. يرجى المحاولة مرة أخرى.",
+    "invalid_response": "تنسيق استجابة غير صحيح من الخادم",
+    "request_failed": "فشل الطلب",
+    "parse_error": "فشل في تحليل استجابة الخطأ",
+    "not_logged_in": "أنت غير مسجل. يرجى تسجيل الدخول للمتابعة.",
+    "no_page_permission": "ليس لديك صلاحية للدخول لهذه الصفحة."
   },
   "file": {
     "text_split_success": "تم تقسيم النص إلى {count} ملف(ات)",
@@ -45,6 +64,10 @@
     "services_subtitle": "تهيئة الباقات والأنشطة السياحية",
     "hotels": "الفنادق",
     "hotels_subtitle": "متابعة الفنادق الشريكة والتوافر",
+    "operations": "العمليات",
+    "operations_subtitle": "إدارة العمليات والأنشطة التجارية",
+    "camp": "المخيم",
+    "camp_subtitle": "إدارة حجوزات المخيمات",
     "history": "السجل",
     "history_subtitle": "مراجعة السجلات والتعديلات السابقة",
     "settings": "الإعدادات",
@@ -76,6 +99,14 @@
   "hotels": {
     "title": "الفنادق",
     "success": "تم تحديث قائمة الفنادق"
+  },
+  "operations": {
+    "title": "العمليات",
+    "success": "تم تحديث العمليات"
+  },
+  "camp": {
+    "title": "المخيم",
+    "success": "تم تحديث حجوزات المخيم"
   },
   "history": {
     "title": "السجل",
