feat: Implement booking feature with new booking screen and table system
- Add new booking screen and integrate with navigation
- Create booking table widget for displaying bookings
- Implement new booking cubit for state management
- Add data models and data sources for booking functionality
- Ensure all UI text is translated and follows i18n guidelines
- Split large files into smaller components for better organization
- Follow Clean Architecture principles throughout the implementation

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -21,11 +21,22 @@
     "login_failed": "فشل تسجيل الدخول. يرجى المحاولة مرة أخرى."
   },
   "common": {
+    "cancel": "إلغاء",
+    "save": "حفظ",
     "required": "*",
     "select_all": "تحديد الكل",
     "logout": "تسجيل الخروج",
     "user": "مستخدم",
-    "no_permissions": "لا توجد صلاحيات متاحة"
+    "no_permissions": "لا توجد صلاحيات متاحة",
+    "previous": "السابق",
+    "next": "التالي",
+    "search": "بحث",
+    "filter": "تصفية",
+    "add": "إضافة",
+    "download": "تحميل",
+    "invoice": "فاتورة",
+    "hide_menu": "إخفاء القائمة",
+    "show_menu": "إظهار القائمة"
   },
   "errors": {
     "page_not_found": "الصفحة غير موجودة: {uri}",
@@ -82,7 +93,53 @@
     "success": "تم تنفيذ عملية الحجز",
     "pickup_time": "مواعيد الاستلام",
     "pickup_time_subtitle": "إدارة جداول ومواعيد الاستلام",
-    "pickup_time_success": "تم تحديث مواعيد الاستلام"
+    "pickup_time_success": "تم تحديث مواعيد الاستلام",
+    "num": "الرقم",
+    "date": "التاريخ",
+    "time": "الوقت",
+    "ticket_number": "رقم التذكرة",
+    "order_number": "رقم الطلب",
+    "pickup_time_col": "وقت الاستلام",
+    "pickup_status": "حالة الاستلام",
+    "employee": "الموظف",
+    "guest_name": "اسم الضيف",
+    "location": "الموقع",
+    "phone_number": "رقم الهاتف",
+    "status": "الحالة",
+    "agent_name": "اسم الوكيل",
+    "hotel_name": "اسم الفندق",
+    "room": "الغرفة",
+    "note": "ملاحظة",
+    "driver": "السائق",
+    "car_number": "رقم السيارة",
+    "payment": "الدفع",
+    "p_before_discount": "السعر قبل الخصم",
+    "discount": "الخصم",
+    "t_revenue": "إجمالي الإيرادات",
+    "new_book": "حجز جديد",
+    "download_sheet": "تحميل الجدول",
+    "invoice": "الفاتورة",
+    "search_by_name": "البحث بالاسم",
+    "filter": "تصفية",
+    "services": "الخدمات",
+    "adult": "بالغ",
+    "child": "طفل",
+    "kid": "طفل صغير",
+    "adult_price": "سعر البالغ",
+    "child_price": "سعر الطفل",
+    "kid_price": "سعر الطفل الصغير",
+    "total_price": "السعر الإجمالي",
+    "previous": "< السابق",
+    "next": "التالي >",
+    "description": "يعمل هذا القسيمة كإيصال رسمي وتأكيد للخدمات المحجوزة",
+    "save": "حفظ",
+    "add_service": "إضافة خدمة",
+    "add_new_book": "إضافة حجز جديد",
+    "currency": "العملة",
+    "p_after_discount": "السعر بعد الخصم",
+    "vat": "ضريبة القيمة المضافة",
+    "net_profit": "صافي الربح",
+    "select_agent_location": "يرجى اختيار الوكيل والموقع أولاً"
   },
   "receipt_voucher": {
     "title": "سندات القبض",
