--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -21,11 +21,22 @@
     "login_failed": "Anmeldung fehlgeschlagen. Bitte versuchen Sie es erneut."
   },
   "common": {
+    "cancel": "Abbrechen",
+    "save": "Speichern",
     "required": "*",
     "select_all": "Alle auswählen",
     "logout": "Abmelden",
     "user": "Benutzer",
-    "no_permissions": "Keine Berechtigungen verfügbar"
+    "no_permissions": "Keine Berechtigungen verfügbar",
+    "previous": "Vorherige",
+    "next": "Nächste",
+    "search": "Suchen",
+    "filter": "Filter",
+    "add": "Hinzufügen",
+    "download": "Herunterladen",
+    "invoice": "Rechnung",
+    "hide_menu": "Menü ausblenden",
+    "show_menu": "Menü anzeigen"
   },
   "errors": {
     "page_not_found": "Seite nicht gefunden: {uri}",
@@ -82,7 +93,53 @@
     "success": "Buchungsaktion abgeschlossen",
     "pickup_time": "Abholzeit",
     "pickup_time_subtitle": "Verwaltung von Abholzeiten und Zeitplänen",
-    "pickup_time_success": "Abholzeit aktualisiert"
+    "pickup_time_success": "Abholzeit aktualisiert",
+    "num": "Nummer",
+    "date": "Datum",
+    "time": "Zeit",
+    "ticket_number": "Ticketnummer",
+    "order_number": "Bestellnummer",
+    "pickup_time_col": "Abholzeit",
+    "pickup_status": "Abholstatus",
+    "employee": "Mitarbeiter",
+    "guest_name": "Gastname",
+    "location": "Standort",
+    "phone_number": "Telefonnummer",
+    "status": "Status",
+    "agent_name": "Agentenname",
+    "hotel_name": "Hotelname",
+    "room": "Zimmer",
+    "note": "Notiz",
+    "driver": "Fahrer",
+    "car_number": "Autonummer",
+    "payment": "Zahlung",
+    "p_before_discount": "Preis vor Rabatt",
+    "discount": "Rabatt",
+    "t_revenue": "Gesamterlös",
+    "new_book": "Neue Buchung",
+    "download_sheet": "Tabelle herunterladen",
+    "invoice": "Rechnung",
+    "search_by_name": "Nach Namen suchen",
+    "filter": "Filter",
+    "services": "Dienstleistungen",
+    "adult": "Erwachsener",
+    "child": "Kind",
+    "kid": "Kleinkind",
+    "adult_price": "Erwachsenenpreis",
+    "child_price": "Kinderpreis",
+    "kid_price": "Kleinkindpreis",
+    "total_price": "Gesamtpreis",
+    "previous": "< Zurück",
+    "next": "Weiter >",
+    "description": "Dieser Gutschein dient als offizieller Beleg und Bestätigung der gebuchten Dienstleistungen",
+    "save": "Speichern",
+    "add_service": "Dienst hinzufügen",
+    "add_new_book": "Neue Buchung hinzufügen",
+    "currency": "Währung",
+    "p_after_discount": "Preis nach Rabatt",
+    "vat": "MwSt",
+    "net_profit": "Nettogewinn",
+    "select_agent_location": "Wählen Sie zuerst Agent und Standort"
   },
   "receipt_voucher": {
     "title": "Quittung",
