--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -21,11 +21,22 @@
     "login_failed": "Login failed. Please try again."
   },
   "common": {
+    "cancel": "Cancel",
+    "save": "Save",
     "required": "*",
     "select_all": "Select All",
     "logout": "Logout",
     "user": "User",
-    "no_permissions": "No permissions available"
+    "no_permissions": "No permissions available",
+    "previous": "Previous",
+    "next": "Next",
+    "search": "Search",
+    "filter": "Filter",
+    "add": "Add",
+    "download": "Download",
+    "invoice": "Invoice",
+    "hide_menu": "Hide Menu",
+    "show_menu": "Show Menu"
   },
   "errors": {
     "page_not_found": "Page not found: {uri}",
@@ -82,7 +93,53 @@
     "success": "Booking action completed",
     "pickup_time": "Pickup Time",
     "pickup_time_subtitle": "Manage pickup timings and schedules",
-    "pickup_time_success": "Pickup time updated"
+    "pickup_time_success": "Pickup time updated",
+    "num": "Num",
+    "date": "Date",
+    "time": "Time",
+    "ticket_number": "Ticket Number",
+    "order_number": "Order Number",
+    "pickup_time_col": "Pickup time",
+    "pickup_status": "Pickup Status",
+    "employee": "Employee",
+    "guest_name": "Guest Name",
+    "location": "Location",
+    "phone_number": "Phone Number",
+    "status": "Status",
+    "agent_name": "Agent Name",
+    "hotel_name": "Hotel Name",
+    "room": "Room",
+    "note": "Note",
+    "driver": "Driver",
+    "car_number": "Car Number",
+    "payment": "Payment",
+    "p_before_discount": "P/Before Discount",
+    "discount": "Discount",
+    "t_revenue": "T/Revenue",
+    "new_book": "New Book",
+    "download_sheet": "Download Sheet",
+    "invoice": "Invoice",
+    "search_by_name": "Search By Name",
+    "filter": "Filter",
+    "services": "Services",
+    "adult": "Adult",
+    "child": "Child",
+    "kid": "Kid",
+    "adult_price": "Adult Price",
+    "child_price": "Child Price",
+    "kid_price": "Kid Price",
+    "total_price": "Total Price",
+    "previous": "< Previous",
+    "next": "Next >",
+    "description": "This voucher serves as an official receipt and confirmation of services booked",
+    "save": "Save",
+    "add_service": "Add Service",
+    "add_new_book": "Add New Book",
+    "currency": "Currency",
+    "p_after_discount": "P/After Discount",
+    "vat": "Vat",
+    "net_profit": "Net profit",
+    "select_agent_location": "Select Agent & Location first"
   },
   "receipt_voucher": {
     "title": "Receipt Voucher",
