--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -21,11 +21,22 @@
     "login_failed": "Error al iniciar sesión. Por favor, intente nuevamente."
   },
   "common": {
+    "cancel": "Cancelar",
+    "save": "Guardar",
     "required": "*",
     "select_all": "Seleccionar todo",
     "logout": "Cerrar sesión",
     "user": "Usuario",
-    "no_permissions": "No hay permisos disponibles"
+    "no_permissions": "No hay permisos disponibles",
+    "previous": "Anterior",
+    "next": "Siguiente",
+    "search": "Buscar",
+    "filter": "Filtrar",
+    "add": "Agregar",
+    "download": "Descargar",
+    "invoice": "Factura",
+    "hide_menu": "Ocultar menú",
+    "show_menu": "Mostrar menú"
   },
   "errors": {
     "page_not_found": "Página no encontrada: {uri}",
@@ -82,7 +93,53 @@
     "success": "Acción de reserva completada",
     "pickup_time": "Hora de recogida",
     "pickup_time_subtitle": "Gestionar horarios y programaciones de recogida",
-    "pickup_time_success": "Hora de recogida actualizada"
+    "pickup_time_success": "Hora de recogida actualizada",
+    "num": "Número",
+    "date": "Fecha",
+    "time": "Hora",
+    "ticket_number": "Número de billete",
+    "order_number": "Número de pedido",
+    "pickup_time_col": "Hora de recogida",
+    "pickup_status": "Estado de recogida",
+    "employee": "Empleado",
+    "guest_name": "Nombre del huésped",
+    "location": "Ubicación",
+    "phone_number": "Número de teléfono",
+    "status": "Estado",
+    "agent_name": "Nombre del agente",
+    "hotel_name": "Nombre del hotel",
+    "room": "Habitación",
+    "note": "Nota",
+    "driver": "Conductor",
+    "car_number": "Número de coche",
+    "payment": "Pago",
+    "p_before_discount": "Precio antes del descuento",
+    "discount": "Descuento",
+    "t_revenue": "Ingresos totales",
+    "new_book": "Nueva reserva",
+    "download_sheet": "Descargar hoja",
+    "invoice": "Factura",
+    "search_by_name": "Buscar por nombre",
+    "filter": "Filtro",
+    "services": "Servicios",
+    "adult": "Adulto",
+    "child": "Niño",
+    "kid": "Bebé",
+    "adult_price": "Precio adulto",
+    "child_price": "Precio niño",
+    "kid_price": "Precio bebé",
+    "total_price": "Precio total",
+    "previous": "< Anterior",
+    "next": "Siguiente >",
+    "description": "Este vale sirve como recibo oficial y confirmación de los servicios reservados",
+    "save": "Guardar",
+    "add_service": "Agregar servicio",
+    "add_new_book": "Agregar nueva reserva",
+    "currency": "Moneda",
+    "p_after_discount": "Precio después del descuento",
+    "vat": "IVA",
+    "net_profit": "Beneficio neto",
+    "select_agent_location": "Seleccione primero el agente y la ubicación"
   },
   "receipt_voucher": {
     "title": "Recibo",
