--- a/assets/translations/hi.json
+++ b/assets/translations/hi.json
@@ -21,11 +21,22 @@
     "login_failed": "लॉगिन विफल। कृपया पुनः प्रयास करें।"
   },
   "common": {
+    "cancel": "रद्द करें",
+    "save": "सहेजें",
     "required": "*",
     "select_all": "सभी चुनें",
     "logout": "लॉगआउट",
     "user": "उपयोगकर्ता",
-    "no_permissions": "कोई अनुमतियां उपलब्ध नहीं"
+    "no_permissions": "कोई अनुमतियां उपलब्ध नहीं",
+    "previous": "पिछला",
+    "next": "अगला",
+    "search": "खोजें",
+    "filter": "फ़िल्टर",
+    "add": "जोड़ें",
+    "download": "डाउनलोड",
+    "invoice": "चालान",
+    "hide_menu": "मेनू छुपाएं",
+    "show_menu": "मेनू दिखाएं"
   },
   "errors": {
     "page_not_found": "पृष्ठ नहीं मिला: {uri}",
@@ -82,7 +93,53 @@
     "success": "बुकिंग कार्रवाई पूरी",
     "pickup_time": "पिकअप समय",
     "pickup_time_subtitle": "पिकअप समय और अनुसूची का प्रबंधन",
-    "pickup_time_success": "पिकअप समय अपडेट किया गया"
+    "pickup_time_success": "पिकअप समय अपडेट किया गया",
+    "num": "संख्या",
+    "date": "तारीख",
+    "time": "समय",
+    "ticket_number": "टिकट संख्या",
+    "order_number": "ऑर्डर संख्या",
+    "pickup_time_col": "पिकअप समय",
+    "pickup_status": "पिकअप स्थिति",
+    "employee": "कर्मचारी",
+    "guest_name": "अतिथि का नाम",
+    "location": "स्थान",
+    "phone_number": "फोन नंबर",
+    "status": "स्थिति",
+    "agent_name": "एजेंट का नाम",
+    "hotel_name": "होटल का नाम",
+    "room": "कमरा",
+    "note": "नोट",
+    "driver": "ड्राइवर",
+    "car_number": "कार नंबर",
+    "payment": "भुगतान",
+    "p_before_discount": "छूट से पहले कीमत",
+    "discount": "छूट",
+    "t_revenue": "कुल राजस्व",
+    "new_book": "नई बुकिंग",
+    "download_sheet": "शीट डाउनलोड करें",
+    "invoice": "चालान",
+    "search_by_name": "नाम से खोजें",
+    "filter": "फ़िल्टर",
+    "services": "सेवाएं",
+    "adult": "वयस्क",
+    "child": "बच्चा",
+    "kid": "छोटा बच्चा",
+    "adult_price": "वयस्क मूल्य",
+    "child_price": "बच्चे का मूल्य",
+    "kid_price": "छोटे बच्चे का मूल्य",
+    "total_price": "कुल मूल्य",
+    "previous": "< पिछला",
+    "next": "अगला >",
+    "description": "यह वाउचर बुक की गई सेवाओं की आधिकारिक रसीद और पुष्टि के रूप में कार्य करता है",
+    "save": "सहेजें",
+    "add_service": "सेवा जोड़ें",
+    "add_new_book": "नई बुकिंग जोड़ें",
+    "currency": "मुद्रा",
+    "p_after_discount": "छूट के बाद मूल्य",
+    "vat": "वैट",
+    "net_profit": "शुद्ध लाभ",
+    "select_agent_location": "पहले एजेंट और स्थान चुनें"
   },
   "receipt_voucher": {
     "title": "रसीद वाउचर",
