--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -21,11 +21,22 @@
     "login_failed": "Ошибка входа. Пожалуйста, попробуйте снова."
   },
   "common": {
+    "cancel": "Отмена",
+    "save": "Сохранить",
     "required": "*",
     "select_all": "Выбрать все",
     "logout": "Выйти",
     "user": "Пользователь",
-    "no_permissions": "Нет доступных разрешений"
+    "no_permissions": "Нет доступных разрешений",
+    "previous": "Предыдущий",
+    "next": "Следующий",
+    "search": "Поиск",
+    "filter": "Фильтр",
+    "add": "Добавить",
+    "download": "Скачать",
+    "invoice": "Счет",
+    "hide_menu": "Скрыть меню",
+    "show_menu": "Показать меню"
   },
   "errors": {
     "page_not_found": "Страница не найдена: {uri}",
@@ -82,7 +93,53 @@
     "success": "Действие бронирования выполнено",
     "pickup_time": "Время получения",
     "pickup_time_subtitle": "Управление расписанием получения",
-    "pickup_time_success": "Время получения обновлено"
+    "pickup_time_success": "Время получения обновлено",
+    "num": "Номер",
+    "date": "Дата",
+    "time": "Время",
+    "ticket_number": "Номер билета",
+    "order_number": "Номер заказа",
+    "pickup_time_col": "Время получения",
+    "pickup_status": "Статус получения",
+    "employee": "Сотрудник",
+    "guest_name": "Имя гостя",
+    "location": "Местоположение",
+    "phone_number": "Номер телефона",
+    "status": "Статус",
+    "agent_name": "Имя агента",
+    "hotel_name": "Название отеля",
+    "room": "Номер",
+    "note": "Примечание",
+    "driver": "Водитель",
+    "car_number": "Номер машины",
+    "payment": "Оплата",
+    "p_before_discount": "Цена до скидки",
+    "discount": "Скидка",
+    "t_revenue": "Общий доход",
+    "new_book": "Новое бронирование",
+    "download_sheet": "Скачать таблицу",
+    "invoice": "Счет",
+    "search_by_name": "Поиск по имени",
+    "filter": "Фильтр",
+    "services": "Услуги",
+    "adult": "Взрослый",
+    "child": "Ребенок",
+    "kid": "Малыш",
+    "adult_price": "Цена для взрослого",
+    "child_price": "Цена для ребенка",
+    "kid_price": "Цена для малыша",
+    "total_price": "Общая цена",
+    "previous": "< Назад",
+    "next": "Далее >",
+    "description": "Этот ваучер служит официальной квитанцией и подтверждением забронированных услуг",
+    "save": "Сохранить",
+    "add_service": "Добавить услугу",
+    "add_new_book": "Добавить новое бронирование",
+    "currency": "Валюта",
+    "p_after_discount": "Цена после скидки",
+    "vat": "НДС",
+    "net_profit": "Чистая прибыль",
+    "select_agent_location": "Сначала выберите агента и местоположение"
   },
   "receipt_voucher": {
     "title": "Квитанция",
